squash bugs

--- a/default.css
+++ b/default.css
@@ -1,4 +1,4 @@
-/* *{outline: 1px solid #f00 !important;}*/
+ *{outline: 1px solid #f00 !important;}*/
 
 *,
 ::after,
@@ -17,14 +17,13 @@ a {text-decoration: none;}
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        max-width:  100%;;
-        margin: 0 03rem;
+        max-width: 75rem;
+        margin: 0 20rem;
 }
 
 
 .nav-container{
     display: flex;
-    width: auto;
     height: 2.9rem;
     padding-left: 15px;
     padding-right: 15px;
